--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -324,6 +324,24 @@ footer {
     flex-direction: column;
     align-items: center;
 }
+/*Media query: tablets and larger(428px and up) */
+@media screen and (min-width:428px) {
+    /*Use the keyframes library to give rotation animation to the image
+and create a classe for that to aply the style -- https://www.youtube.com/watch?v=eTELLTacg-8-- */
+
+@keyframes image-rotation-animation {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.other-images {
+    animation: image-rotation-animation 5s linear;
+}
 
 
     /*Media query: tablets and larger(768px and up) */
