--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -468,6 +468,114 @@ a.link-button:hover {
     height: 100%
 }
 
+/*member page */
+
+#form {
+    background: url('../images/celeste-form.webp') 40% /cover;
+    color: var(--secondary-color);
+    padding: 0.5rem 10% 1rem 1.5rem;
+    margin-left: 1%;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+form {
+    color: var(--hover-color);
+    font-size: 1.3rem;
+    background-color: rgba(255, 255, 255, 0.511);
+    width: 100%;
+    max-height: 70%;
+    border-radius: 15px;
+}
+
+.form-fields {
+    width: 60%;
+    margin: 0.5rem;
+}
+
+.text-input {
+    width: 100%;
+    min-height: 2rem;
+    border: 1px solid var(--primary-color);
+    border-radius: 8px;
+    color: var(--primary-color);
+    margin-top: 0.5rem;
+}
+
+.member-text {
+    margin-bottom: 2rem;
+    margin-right: 5rem;
+    font-weight: 600;
+    background-color: rgba(35, 35, 35, 0.511);
+    border-radius: 12px;
+    font-size: 1.2rem;
+
+}
+
+
+/*applied style to select option at form-fiels*/
+.form-fields select {
+    background-color: var(--shadow-color);
+    max-width: 50%;
+    padding: 2px;
+    font-family: var(--second-font);
+    font-size: 1rem;
+}
+
+/*definition of style to all labels and inputs*/
+.services-fields {
+    width: 100%;
+    padding: 0.5rem;
+    display: flex;
+    flex-wrap: wrap;
+    flex: 0 0 50%;
+    margin-bottom: 10px;
+}
+
+.services-fields input[type="checkbox"] {
+    padding-left: 10rem;
+}
+
+#form h4 {
+    font-size: 1.4rem;
+    font-weight: 600;
+    padding-top: 10px;
+    padding-left: 5px;
+}
+
+.additional {
+    font-size: 1.3rem;
+    font-weight: 600;
+    padding-top: 1.2rem;
+    padding-right: 1.2rem;
+    min-width: 100%;
+}
+
+.additional textarea {
+    width: 100%;
+    margin: 0.5rem;
+    border: 2px solid var(--primary-color);
+    border-radius: 5px;
+    font-size: 0.8rem;
+    color: var(--primary-color);
+}
+
+/*style to the input button :apply */
+.button-form {
+    font-family: var(--primary-font);
+    background-color: var(--secondary-color);
+    padding: 1px;
+    margin: 6px;
+    width: 6rem;
+    height: 2.3rem;
+    border-radius: 10px;
+    font-size: 1.5rem;
+    font-weight: 600;
+    border: none;
+    position: relative;
+    bottom: 2rem;
+    left: 5%;
+}
 
 /*Footer Style */
 footer {
