--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,14 +206,14 @@ main {
 .button {
     font-family: var(--second-font);
     color: var(--primary-color);
-    font-size: 0.8rem;
-    padding: 2px;
+    margin-top:1rem;
+    padding: 1px;
     font-weight: 600;
     background-color: var(--secondary-color);
-    width: 128px;
-    height: 1.2rem;
+    width: 8rem;
+    height: 1.3rem;
     border-radius: 8px;
-    font-size: 1rem;
+    font-size: 0.8rem;
     border: none;
     display: flex;
     justify-content: center;
@@ -772,9 +772,42 @@ and create a classe for that to aply the style -- https://www.youtube.com/watch?
         padding: 1rem;
         gap: 2.5rem;
     }
+    #hero-image__cover-text-title__text {
+        top: 70%;
+    }
 
+    #hero-image__cover-text-title__text h5 {
+        font-size: 1.2rem;
+        padding-top: 0;
+    }
 
-    
+    #hero-image__cover-text-title__text h4 {
+        margin-top: 8px;
+        font-size: 1.4rem;
+        /* Adicione o ponto e vírgula aqui */
+        padding-top: 0;
+
+    }
+
+    #hero-image__button {
+        top: 85%;
+        margin-top: 5px;
+
+    }
+
+    #hero-image__button button {
+        width: 200px;
+        height: 25px;
+       
+
+    }
+
+    .button {
+        
+        width: 10rem;
+        height: 2rem;
+        border-radius:50px;
+    }
 
     /* About-Section */
     .heading-container {
