--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -380,7 +380,7 @@ a.link-button:hover {
 }
 
 .card-testimonial {
-    width: 90%;
+    min-width: 90%;
     min-height: 300px;
     background-color: var(--primary-color);
     border-radius: 30px;
@@ -780,12 +780,12 @@ and create a classe for that to aply the style -- https://www.youtube.com/watch?
     /*Testimonial cards responsive with GRID */
     #testimonial-container {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(2,1fr);
 
     }
 
     .card-center {
-        margin-left: 12rem;
+        margin-left: 15rem;
     }
 
     /*Member form fields*/
@@ -923,8 +923,7 @@ and create a classe for that to aply the style -- https://www.youtube.com/watch?
     /*video -location section */
 
     .video-container video {
-        padding-top: 10rem;
-
+       padding-top: 15%;
     }
 
     /*member page/form - services-fields adjust to big sreenc sizes */
@@ -933,4 +932,9 @@ and create a classe for that to aply the style -- https://www.youtube.com/watch?
         /* Redefine a largura dos contêineres dos campos de serviço para 25% com um espaçamento entre eles */
     }
 
+}
+@media screen and (min-width:1200px) {
+    .video-container video {
+        padding-top:0;
+     }
 }
