--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,14 +67,13 @@ header {
     position: fixed;
     top: 0;
     z-index: 99;
-    height: 53px;
     width: 100%;
+    height: 12%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     /*Give the header a shadow */
     box-shadow: 0 2px 2px var(--hover-color);
-    /* Adicionei uma sombra para destacar o cabeçalho */
     background-color: black;
 }
 
@@ -103,7 +102,7 @@ nav {
     width: 100%;
     left: 0;
     padding: 0 1rem;
-    box-shadow: 1px 2px 2px var(--hover-color);
+    box-shadow:0 2px 2px var(--hover-color);
     background-color: var(--hover-color);
     display: none;
     top: 100%;
@@ -140,7 +139,7 @@ main {
 /*Hero image section */
 #hero-image {
     min-height: 36vh;
-    max-width: 99vw;
+    width: 100%;
     background: url('../images/hero-image.webp') no-repeat center right /cover;
     position: relative;
 }
@@ -158,7 +157,7 @@ main {
 #hero-image__cover-text-title__text {
     /* Give the element horizontly position and vertical in the center*/
     position: absolute;
-    left: 50%;
+    left: 52%;
     top: 60%;
     transform: translate(-50%, -50%);
     /* put the element in the center*/
@@ -168,11 +167,9 @@ main {
 }
 
 #hero-image__cover-text-title__text h4,
-#hero-image__cover-text-title__text h5,
-#hero-image__cover-text-title__text ul {
+#hero-image__cover-text-title__text h5{
     /* give space between the elements */
-    margin-bottom: 4px;
-    
+    margin-bottom: 4px;   
 }
 
 #hero-image__cover-text-title__text h5 {
@@ -208,6 +205,7 @@ main {
     font-family: var(--second-font);
     color: var(--primary-color);
     margin-top: 1rem;
+    margin-left: 5%;
     padding: 1px;
     font-weight: 600;
     background-color: var(--secondary-color);
@@ -691,13 +689,15 @@ and create a classe for that to aply the style -- https://www.youtube.com/watch?
 /*Media query: tablets and larger(768px and up) */
 @media screen and (min-width:768px) {
     /* Header */
-
+    
     nav {
         display: block;
         position: relative;
         background-color: var(--primary-color);
         top: 0;
+        box-shadow: none;
     }
+    
 
     .nav-burger {
         display: none;
@@ -714,12 +714,14 @@ and create a classe for that to aply the style -- https://www.youtube.com/watch?
     #menu li a {
         color: var(--secondary-color);
         margin-left: 4rem;
-        font-size: 1.3rem;
+        font-size: 1.2rem;
     }
 
     #menu a {
         text-decoration: none;
     }
+
+   
 
     #hero-image__cover-text-title__text {
         top: 68%;
@@ -935,6 +937,7 @@ and create a classe for that to aply the style -- https://www.youtube.com/watch?
 
 }
 @media screen and (min-width:1200px) {
+    
     .video-container video {
         padding-top:0;
      }
